Fixed image overflow and merge faults

--- a/frontend/src/assets/less/themes/lte/custom/sidebar.less
+++ b/frontend/src/assets/less/themes/lte/custom/sidebar.less
@@ -19,6 +19,10 @@
   margin-bottom: 15px;
 }
 
+.info-box-custom{
+  overflow:hidden;
+  
+}
 .rectangle:hover{
   width: 165px;
   background-color: #5bb9f7;
